 2015-03-18 21:38  asfernandes 
   A doc/sql.extensions/README.statistical_functions.txt
   M src/dsql/AggNodes.cpp
   M src/dsql/AggNodes.h
   M src/dsql/parse.y
   M src/jrd/blp.h
   M src/jrd/blr.h
   M src/jrd/val.h
   M src/yvalve/keywords.cpp
Feature CORE-4714 - Aggregate statistical functions stddev_pop, stddev_samp, var_pop and var_samp - contributed by Hajime Nakagami.

 2015-03-18 17:28  dimitr 
   M src/burp/restore.epp
Complement my recent changes in this module.

 2015-03-18 17:26  hvlad 
   M src/jrd/vio.cpp
Fixed bug CORE-4713 : "BLOB not found" error at rollback after insert into table with expression index

 2015-03-18 17:22  dimitr 
   M doc/WhatsNew
Updated the docs for Beta 2.

 2015-03-18 02:03  asfernandes 
   M src/include/firebird/FirebirdInterface.idl
   M src/include/firebird/IdlFbInterfaces.h
   M src/yvalve/YObjects.h
   M src/yvalve/utl.cpp
Added IUtil::formatStatus.

 2015-03-17 21:44  asfernandes 
   M src/auth/SecurityDatabase/LegacyManagement.epp
   M src/auth/SecurityDatabase/LegacyServer.cpp
   M src/jrd/Record.h
   M src/jrd/pcmet.epp
   M src/jrd/vio.cpp
   M src/msgs/facilities2.sql
   M src/remote/server/server.cpp
   M src/yvalve/MasterImplementation.cpp
   M src/yvalve/why.cpp
Misc.

 2015-03-17 09:15  paulbeach 
   M builds/install/arch-specific/darwin/launchdss.org.firebird.gds.plist
Use RunAtLoad rather than KeepAlive

 2015-03-13 15:31  robocop 
   M src/dsql/metd.epp
   M src/jrd/scl.epp
rdb$system_flag is not nullable in FB3.

 2015-03-13 15:30  robocop 
   M src/jrd/idx.cpp
   M src/jrd/vio.cpp
Misc.

 2015-03-13 15:26  robocop 
   M examples/interfaces/01.create.cpp
   M src/common/StatusArg.cpp
   M src/common/StatusHolder.h
   M src/common/isc_file.cpp
   M src/common/os/posix/os_utils.cpp
   M src/common/utils.cpp
   M src/dsql/DdlNodes.epp
   M src/dsql/ExprNodes.cpp
   M src/gpre/cmp.cpp
   M src/gpre/sql.cpp
   M src/isql/isql.epp
   M src/jrd/Record.h
   M src/jrd/cch.cpp
   M src/jrd/dpm.epp